--- a/my-website/components/ProfileComponent/ProfileComponent.css
+++ b/my-website/components/ProfileComponent/ProfileComponent.css
@@ -1,7 +1,7 @@
 .profile-container{
-    padding-left: 50%;
-    padding-top: 15%;
-    width: 100%;
+    padding-left: 45%;
+    padding-top: 14%;
+    width: 450px;
 }
 .image-container{
     border-radius: 50%;
