--- a/my-website/components/Profile/ProfileComponent.css
+++ b/my-website/components/Profile/ProfileComponent.css
@@ -63,9 +63,8 @@
     justify-content: center;
     padding-left: 10px;
     cursor: pointer;
-    
-
 }
+
 .resume-container{
     font-family: "Poppins", sans-serif;
     border: 1px solid white;
@@ -89,6 +88,7 @@
     height: 20px;
     width: 20px;
     padding-top: 16px;
+    padding-left: 4px;
 }
 
 
