--- a/my-website/components/Education/EducationComponent.css
+++ b/my-website/components/Education/EducationComponent.css
@@ -1,6 +1,13 @@
 .education-container{
     display: flex;
     flex-direction: row;
-    border-left: 1px solid #636363;
+    border-left: 2px solid #636363;
     padding-left: 30px;
+}
+
+
+@media screen and (max-width: 500px) {
+    .content-text3{
+        padding-top: 20px;
+    }
 }
