--- a/my-website/components/Projects/ProjectComponent.css
+++ b/my-website/components/Projects/ProjectComponent.css
@@ -18,6 +18,7 @@
 
 .project-info-container{
     padding-top: 15px;
+    padding-right:100px;
 }
 
 .github-container{
@@ -45,3 +46,4 @@
     padding-top:10px;
     
 }
+
