--- a/my-website/src/app/page.css
+++ b/my-website/src/app/page.css
@@ -9,3 +9,15 @@
 .content{
     margin-left: 25%;
 }
+
+@media screen and (max-width: 1600px) {
+    .container{
+        display: flex;
+        flex-direction: column;
+    }
+}
+@media screen and (max-width: 500px) {
+    .content {
+            margin-left: 10%;
+        }
+}
