--- a/my-website/styles/globals.css
+++ b/my-website/styles/globals.css
@@ -9,5 +9,27 @@ body {
     color: white;
     margin: 0;
     padding: 0;
-    min-height: 100%;
+    min-height: 10%;
+}
+
+::-webkit-scrollbar {
+    width: 8px;
+    /* Width of the scrollbar */
+}
+
+::-webkit-scrollbar-track {
+    background: #2d3748;;
+    /* Background color of the scrollbar track */
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #4a5568;
+
+    border-radius: 4px;
+
+}
+
+@media screen and (max-width: 700px) {
+
+
 }
